<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="projectr.housechores.MainClasses.Home"
    tools:showIn="@layout/activity_home"
    android:background="@drawable/images">


    <TextView
        android:text="@string/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:text="@string/totalChores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

    <Button
        android:text="@string/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:id="@+id/addbutton"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
        android:textColorLink="@android:color/holo_blue_dark"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="addButtonPressed"
        android:elevation="0dp"
        android:backgroundTint="@android:color/black" />

    <TextView
        android:text="@string/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subtitle"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_above="@+id/task"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="62dp" />

    <TextView
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/completedTasks"
        android:layout_alignBaseline="@+id/total"
        android:layout_alignBottom="@+id/total"
        android:layout_alignStart="@+id/addbutton"
        android:layout_marginStart="76dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/enterTask"
        android:ems="10"
        android:id="@+id/task"
        android:hint="@string/taskhint"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/enterDay"
        android:ems="10"
        android:layout_marginBottom="61dp"
        android:id="@+id/daytocomplete"
        style="@style/Widget.AppCompat.EditText"
        android:hint="@string/dayhint"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_above="@+id/addbutton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/nameHint"
        android:id="@+id/name"
        android:layout_above="@+id/addbutton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
