<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images">

    <TextView
        android:text="@string/action_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:id="@+id/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/searchResults"
        android:ems="10"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:id="@+id/searchname"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_above="@+id/printResults"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="42dp"
        android:onClick="searchNameButtonPressed"/>

    <TextView
        android:text="@string/searchResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/printResults"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>